--- a/about.html
+++ b/about.html
@@ -267,8 +267,8 @@ html {
                 <span class="section-heading-upper">Imperial College Making&Prototyping</span>
                 <span class="section-heading-lower">About Us</span>
               </h2>
-              <p>about us part 1</p>
-              <p class="mb-2">you can do things like this  <em>italic</em> in this section too </p>
+              <p class="mb-2">We are a group of Engineers (Mechanical, Design, Materials) from Imperial College London.
+                <br>Find more about us below.</p>
               <div class="intro-button mx-auto">
                 <a class="btn btn-primary btn-xl" href="#team">Meet the Team</a>
               </div>
@@ -294,7 +294,8 @@ html {
               <h3><span>who we are?</span> creative team</h3>
            </div>
            <div class="col-md-6">
-              <p> add some explanation about the team </p>
+              <p> Recently acquiring a new team member, we are a group of 3 Mechanical Engineers, 1 Design Engineer and 1 Material Scientist. </p>
+              <p> <strong>Hover over image to acquire contact details. </strong></p> 
            </div>
         </div>
         <div class="row" align="center">
@@ -310,9 +311,10 @@ html {
                        </ul>
                     </div>
                  </div>
-                  Lead Prototyper <br>
-                 <span class="section-heading-upper">Priyen Morjaria </span> <br>
-                 Responsible for...
+
+                 <em>Lead Prototyper</em>
+                <h5> Priyen Morjaria </h5>
+                 Responsible for design for manufacture, testing and rapid prototyping.
               </div>
            </div>
            <div class="fl w-20 tc pv5">
@@ -327,9 +329,9 @@ html {
                        </ul>
                     </div>
                  </div>
-                 Lead Mechanical Engineer <br>
-                <span class="section-heading-upper">Lorenzo Bergamaschi </span> <br>
-                Responsible for...
+                  <em>Lead Mechanical Engineer</em>
+               <h5>Lorenzo Bergamaschi</h5>
+                Responsible for mechatronic designs and further technical needs involving mechanism.
               </div>
            </div>
            <div class="fl w-20 tc pv5">
@@ -344,9 +346,10 @@ html {
                        </ul>
                     </div>
                  </div>
-                 Project Manager <br>
-                <span class="section-heading-upper">Jake Reynolds </span> <br>
-                Responsible for...
+
+                <em>Project Manager</em>
+               <h5>Jake Reynolds </h5>
+                Responsible for communication, documentation and team management.
               </div>
            </div>
            <div class="fl w-20 tc pv5">
@@ -363,24 +366,25 @@ html {
                  </div>
                  <em>Lead Designer</em>
                 <h5>Mina Oba </h5>
-                Responsible for...
+                Responsible for CAD, sketching, user needs and ergonomics of product.
               </div>
            </div>
+
            <div class="fl w-20 tc pv5">
               <div class="single-team">
-                 <img src="img/mina.png" alt="">
+                 <img src="img/steven.jpg" alt="">
                  <div class="team-hover">
                     <div class="team-content">
-                       <h4>Mina Oba<span>Lead Designer</span></h4>
+                       <h4>Steven Chen<span>Lead Material Scientist</span></h4>
                        <ul>
                          <li><a href="#"><img src="img/linkedin.jpg" alt=""></a></li>
                          <li><a href="#"><img src="img/website.png" alt=""></a></li>
                        </ul>
                     </div>
                  </div>
-                 <em>Lead Designer</em>
-                <h5>Mina Oba </h5>
-                Responsible for...
+                 <em>Lead Material Scientist</em>
+                <h5>Steven Chen </h5>
+                Materials expert, responsible for material research and selection.
               </div>
            </div>
         </div>
