--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,11 @@
                   	<div class="row">
                   	  <div class="col-md-7">
                           <iframe src="https://maps.google.com/maps?q=Stadium%20House%2C%20Door%20A%2C%2068%20Wood%20Ln%2C%20London%20W12%207TA&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="315" frameborder="0" style="border:0" allowfullscreen alt="map"></iframe>
-                          <h6> Scroll down to contact an individual member of the team</h6>
+<br><br><br>
+                          <div class="intro-button mx-auto">
+                            <a class="btn btn-primary btn-xl" href="about.html#team">Contact an Individual Team member</a>
+                          </div>
+
                         </div>
 
 
@@ -165,11 +169,7 @@
                   <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
                   <span class="section-heading-lower">About Our Cafe</span>
                 </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                <p class="mb-0">We guarantee that you will fall in
-                  <em>lust</em>
-                  with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
-              </div>
+                </div>
             </div>
           </div>
         </div>
