--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
               <span class="section-heading-upper">Our Product</span>
               <span class="section-heading-lower">Stop&Lock</span>
             </h2>
+            <p>Our mechanism comes down to one thing: <em>Simplicity</em></p>
+            <p>Using our magic formula <br> <em>Element Priority</em> = 2 x <em>Criticality</em> + 1 x <em>Difficulty</em>
+            <br> to deliver optimal functionality, ease of use and reliability.</p>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css">
 
@@ -151,25 +154,27 @@
               <!-- The slideshow -->
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="intro-img img-fluid mb-lg-0" src="img/firstprototype.jpg" alt="Prototype 1">
+                  <img class="intro-img img-fluid mb-lg-0" src="img/ScrewSchematic.png" alt="Mechanism Schematic">
                     <div class="text-box">
-                        <h2 class="wow slideInRight" data-wow-duration="2s">First Prototype</h2>
-                        <p class="wow slideInLeft" data-wow-duration="2s">There is now an abundance of readable dummy texts. These are usually used when a text is required purely to fill a space. </p>
+                        <h2 class="wow slideInRight" data-wow-duration="2s">Lead Screw Mechanism</h2>
+                        <p class="wow slideInLeft" data-wow-duration="2s">The mechanism that we chose as our method of locking is the 'lead screw mechanism'. A motor will rotate the screw to apply a downwards force to the ground and an upwards force to the door.
+                        Simple and Robust.</p>
+
                     </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="intro-img img-fluid mb-lg-0" src="img/secondprototype.jpg" alt="Prototype 2">
+                  <img class="intro-img img-fluid mb-lg-0" src="img/ScrewProto2.png" alt="Prototype 2">
                 <div class="text-box">
-                        <h2 class="wow slideInUp" data-wow-duration="4s" >This is samuel text</h2>
-                        <p class="wow fadeInDown" data-wow-duration="4s">There is now an abundance of readable dummy texts. These are usually used when a text is required purely to fill a space. </p>
-                    </div>
+                        <h2 class="wow slideInUp" data-wow-duration="4s" >Latest Prototype of Lead Screw Mechanism</h2>
+                        <p class="wow fadeInDown" data-wow-duration="4s"> The latest prototype is designed with the focus of simplifying the mechanism, increasing device durability and creating
+                        sufficient stopping force.</p>        </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="intro-img img-fluid mb-lg-0" src="img/renderb.png" alt="CAD">
+                  <img class="intro-img img-fluid mb-lg-0" src="img/ElecPicture.png" alt="Electronics">
                 <div class="text-box">
-                        <h2 class="wow fadeInUp" data-wow-duration="4s">This is Airborne text</h2>
-                        <p class="wow fadeInUp" data-wow-duration="2s">There is now an abundance of readable dummy texts. These are usually used when a text is required purely to fill a space. </p>
-                    </div>
+                        <h2 class="wow fadeInUp" data-wow-duration="4s" >Electronics</h2>
+                        <p class="wow fadeInUp" data-wow-duration="2s"> Nema17 stepper motors, A4988 motor drivers and an Arduino Micro was used for a microcontroller. <br>
+                        Electronics designed for quick and easy tightening and release of lock mechanism.</p>            </div>
                 </div>
               </div>
 
