--- a/making.html
+++ b/making.html
@@ -69,77 +69,39 @@
     </div>
   </nav>
 
-    <section class="page-section">
+  <section class="page-section about-heading">
     <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex ml-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">section 5</span>
-              <span class="section-heading-lower">tools to make website</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">what tools you have used to build your website and how you selected them</p>
+      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/london.jpg" alt="London Flats">
+      <div class="about-heading-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5">
+              <h2 class="section-heading mb-4">
+                <span class="section-heading-upper">The making of Stop and Lock</span>
+                <span class="section-heading-lower">Inspiration</span>
+              </h2>
+              Do you
+              <br> a) Live in rented accomodation
+              <br> b) Have flatmates
+              <br> c) Like toget your full deposit background
+              <br> d) All of the above
+              <br>
+              <br> As students living in london, <strong> our answer is d)! </strong>
+              <br>
+              <br>A common problem faced by residents living in a shared, rented flat is the lack of security and privacy of their rooms. If your room doesn't already come with a lock, what are you meant to do?
+              Install a lock, only to lose some of your deposit for 'damaging the property' or live with the discomfort.
+              <br>
+              <br> ...or use our new solution: <em> Stop and Lock. </em>
+
+              </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section">
-    <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex mr-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Section 6</span>
-              <span class="section-heading-lower">domain name</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
-        <div class="product-item-description d-flex ml-auto">
-          <div class="bg-faded p-5 rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper mb-3">How to register and setup a domain name</span>
-            </h2>
-            <p class="mb-0">
-              <ol>
-                <li>Choose an available domain name and extension</li>
-                <li>Choose how long you'd like to reserve the domain name for (year increments)</li>
-                <li>Buy the domain name through domain name registrars (such as GoDaddy, 123-reg, Namecheap, google domains etc.) </li>
-              </ol>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <section class="page-section">
-    <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex ml-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">might delete</span>
-              <span class="section-heading-lower">extra section</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">just here to preserve format but might delete</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   <footer class="footer py-5">
 
