--- a/website.html
+++ b/website.html
@@ -153,62 +153,85 @@
         <div class="product-item-title d-flex">
           <div class="bg-faded p-5 d-flex ml-auto rounded">
             <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Blended to Perfection</span>
-              <span class="section-heading-lower">Coffees &amp; Teas</span>
+              <span class="section-heading-upper">Register and setup</span>
+              <span class="section-heading-lower">Domain Name</span>
             </h2>
           </div>
         </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/domain.jpg" alt="domain">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+            <p class="mb-0">
+              Register name through a domain name registrar who then registers with ICANN (Internet Corporation for Assigned Names and Numbers)
+              <br> 1. Choose a name and extension that is available
+              <br> 2. Choose how long you'd like to reserve the domain name (typically at least a year)
+              <br> 3. Buy the domain name through domain name registrars
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section">
+  <section class="page-section about-heading">
     <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex mr-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-              <span class="section-heading-lower">Bakery &amp; Kitchen</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
-        <div class="product-item-description d-flex ml-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
+      <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/goodwebsite.jpg" alt="Computer">
+      <div class="about-heading-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5">
+              <h2 class="section-heading mb-4">
+
+                <span class="section-heading-lower">Websites</span>
+              </h2>
+              <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">What makes a good website?</span></h2>
+              <strong>Easy Navigation</strong> You don't find yourself lost or stuck on a page
+              <br> <strong>Responsive Design</strong> Responds well to changes in window side or medium (tablet, phone etc.)
+              <br> <strong>Design / Aesthetic</strong> Good use of negative scheme, consistent colour scheme, flexible visuals
+              <br> <strong>Good Quality</strong> Quality of images, content, quick loading
+
+              <br><br><br>
+              <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Accessibility</span></h2>
+              <strong>Alt-tags</strong> Alternative tags to describe an image
+              <br> <strong>Keyboard navigation </strong> Avoiding keyboard traps such as flash applications
+              <br> <strong>Default HTML tags </strong> Using button tags for buttons and anchor tags for links to avoid confused screen readings
+              <br> <strong>Unique names for links/buttons </strong> Describing where clicking a button will navigate to
+              <br> <strong>Colour considerations </strong> Red-green colour deficiency affects approximately 8% of population, hence these colours are avoided
+
+              <br><br><br>
+              <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">General Data Protection Regulation</span></h2>
+              Europe's new framework for data protection laws, in full force since May 25th 2018. It is a legislation for smooth implementation of data privacy laws, whilst simultaneously giving greater protection and rights to individuals.
+              <strong>Cookie Consent</strong> Warning the user that this website uses cookies at the footer of every page
+              <br> <strong>Data Consent </strong> Asking for consent of data retainment in 'Contact' form
+
+              <br><br><br>
+              <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Marketing steps to drive people to this website</span></h2>
+              Ways to increase traffice to website
+              <strong>Quick links</strong> Taking advantage of quick links such as QR codes, bit URL, or creating a short domain name
+              <br> <strong>Sticky Website </strong> Making sure the website is GOOD (Responsive, easy to navigate, loads quickly)
+              <br> <strong> Stay in Constact</strong> Ask for consent to stay in contact through emails or texts
+              <br> <strong> Examine Analytics Data </strong> Look into what audience is viewing website for focused user centred consistent
+              <br> <strong> Comment Section </strong> Add a comment section or interactive section to engage with viewers
+
+              <br><br><br>
+              <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Future steps</span></h2>
+              If I had more time...
+              <strong>More mediums and features</strong> Incorporating videos, music, a search bar.
+              <strong> Further brand development </strong> Focusing more on layout and design, incorporating more CSS and Javascript for a more dynamic website
+
+               </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section">
-    <div class="container">
-      <div class="product-item">
-        <div class="product-item-title d-flex">
-          <div class="bg-faded p-5 d-flex ml-auto rounded">
-            <h2 class="section-heading mb-0">
-              <span class="section-heading-upper">From Around the World</span>
-              <span class="section-heading-lower">Bulk Speciality Blends</span>
-            </h2>
-          </div>
-        </div>
-        <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
-        <div class="product-item-description d-flex mr-auto">
-          <div class="bg-faded p-5 rounded">
-            <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   <footer class="footer py-5">
 
